smaller fixes to the redesign (#85)
* fixed StatsRanking not showing if you are unranked, fix extraction typo

* improved layout of profiles without rank + pastRankings / banned

* improved styling of media component, added icon to media

* smaller css position fixes, updated sw version

* tweaked alias module stylings

* tweaked seasonoverview stylings + season dropdown size

--- a/src/app/components/Pages/Player/stats/modules/Aliases/aliases.scss
+++ b/src/app/components/Pages/Player/stats/modules/Aliases/aliases.scss
@@ -61,10 +61,13 @@
     }
 
     &-time {
-        color: $color-gray;
-        font-size: 0.9em;
+        color: $font-color-subtle;
+        font-size: $font-default;
     }
     &-name {
-        font-size: 1.1em;
+        margin-top: 0.25rem;
+        font-size: $font-big;
+        font-weight: 600;
+        letter-spacing: 0.025em;
     }
 }
